# visualizer2

./: Cargo.toml
vis-core/: Cargo.toml
vis-core/examples/: analyze.rs
vis-core/src/: frames.rs  helpers.rs  lib.rs  visualizer.rs
vis-core/src/analyzer/: beat.rs  fourier.rs  samples.rs  spectrum.rs
vis-core/src/recorder/: cpal.rs  mod.rs  pulse.rs
