[package]
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
name = "vis-core"
version = "0.1.0"

[dependencies]
apodize = "0.3.1"
env_logger = "0.6.0"
ezconf = "0.3.0"
log = "0.4.6"
parking_lot = "0.7.0"
rustfft = "2.1.0"
color-backtrace = "0.1.3"

[dependencies.cpal]
optional = true
version = "0.14.0"

[dependencies.pulse-simple]
optional = true
version = "1.0.1"

[dependencies.triple_buffer]
features = ["raw"]
version = "4.0.0"

[features]
default = ["cpalrecord"]
pulseaudio = ["pulse-simple"]
cpalrecord = ["cpal"]
